syntax = "proto3";
package project.service.v1;
option go_package = "github.com/Wafer233/msproject-be/project-service/proto/project";

// Project message definition
message ProjectMessage {
  int64 id = 1;
  string cover = 2;
  string name = 3;
  string code = 4;
  string description = 5;
  string access_control_type = 6;
  string white_list = 7;
  int32 order = 8;
  int32 deleted = 9;
  string template_code = 10;
  double schedule = 11;
  string create_time = 12;
  string organization_code = 13;
  string deleted_time = 14;
  int32 private = 15;
  string prefix = 16;
  int32 open_prefix = 17;
  int32 archive = 18;
  int64 archive_time = 19;
  int32 open_begin_time = 20;
  int32 open_task_private = 21;
  string task_board_theme = 22;
  int64 begin_time = 23;
  int64 end_time = 24;
  int32 auto_update_schedule = 25;
  string project_code = 26;
  string member_code = 27;
  string join_time = 28;
  int32 is_owner = 29;
  string authorize = 30;
  string owner_name = 31;
  int32 collected = 32;
}

// Request message for finding projects by member ID
message ProjectListRequest {
  int64 member_id = 1;
  int64 page = 2;
  int64 page_size = 3;
}

// Response message for project list
message ProjectListResponse {
  repeated ProjectMessage list = 1;
  int64 total = 2;
}

// Project service definition
service ProjectService {
  // Get projects by member ID
  rpc GetProjectsByMemberId(ProjectListRequest) returns (ProjectListResponse) {}
}